<resources>
    <string name="app_name">No Food Waste</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="home">Dashboard</string>

    <string name="thankyou_donation">Thank you for donation</string>

    <string name="google_api_key">AIzaSyC-yNXRZTkMBzAQ8A_gNfTzi1tTGRYitgM</string>

    <string name="accept_as_volunteer">I wolud like to volunteer for delivering food and receive notifications about food donation</string>

    <string name="select_available_donation_message">Please select the location from where you would like to pick up the food</string>

    <string name="select_available_delivery_message">Please select the location where you want to deliver the foods from the list of charities below</string>

    <string name="donate_food">Donate Food</string>
    <string name="volunteer">Volunteer</string>
    <string name="map_a_location">Help us to find the needy</string>

    <!--<string name="banner_msg">Our goal is to Stop Food Wastage!</string>-->
    <string name="banner_msg">Feed People! Not Landfills!</string>

    <string name="valid_name">Please enter valid name</string>
    <string name="valid_mobile">Please enter valid mobile number</string>

    <string name="alert_msg">Are you sure about the pickup location and delivery location?</string>

    <string name="unable_to_connect">Unable to get data.Please try again</string>

    <string name="thnxvolunter">This is a conformation message for your volunteering to delevery the food </string>
    <string name="thnxdonator">Your food donation has been accepted and our volunteer will pick it up shortly.</string>
    <string name="txtvolunter_Details">Raviji \n 9500369624</string>
    <string name="txtDonation_Details">Dinner 8kg 4th street,\n saligram,chennai\n (8 kms from current location)</string>
    <string name="Delevery_location">Siva nantha ashram \n kattankultuthur \n GST Road ,Chennai</string>

    <string name="thankyou_volunteer">Your request to collect the foods from the donor is accepted.The details of the pick up and delivery locations are given bellow</string>

    <string name="thankyou_map_location">Thank you for sharing the location of needy people.we will verifiy it and update.</string>

</resources>
